fixed services accordion summary to align-items: center

--- a/src/Sass/Services.scss
+++ b/src/Sass/Services.scss
@@ -44,6 +44,7 @@
   width: 60%;
 }
 .accordionsummary{
+  align-items: center;
   background: radial-gradient(
     circle at right, /* Radial gradient centered */
     #333E5A  10%, /* Start with a dark color close to the center */
